# dcl

./: .gitignore  README.md  app_main.py  app_store.py  app_web.py  config.py  convert.py  export_onnx.sh  fgvc_test.txt  gen_gtd.py  img2label.py  r1.sh  run.sh  run_onnx.py  test.py  train.py  ！
apps/admin/: admin_app.py
apps/admin/controller/: c_bmy.py  c_bmys.py  c_brand.py  c_data_source.py  c_delta_ds.py  c_ggh_bmy.py  c_model.py  c_vehicle_image.py  flask_web.py
apps/admin/model/: m_bmy.py  m_bmy_example.py  m_bmys.py  m_brand.py  m_data_source.py  m_delta_ds.py  m_delta_ds_detl.py  m_ggh_bmy.py  m_model.py  m_mongodb.py  m_pk_generator.py  m_vehicle_image.py
apps/cam/: cam_app.py  cam_demo.py
apps/cam/core/: feature_extractor.py  grad_cam.py  guided_backprop_relu_model.py  model_outputs.py
apps/cluster/: cluster_app.py  image_dbscan.py
apps/siamese/: app_config.py  atnt_face_ds.py  contrastive_loss.py  siamese_app.py  siamese_network.py
apps/vbg/: vbg_app.py  vbg_util.py
apps/vbg/controller/: c_vbg.py
apps/vbg/model/: m_file_odb.py  m_vehicle_brand.py
apps/wxs/: wxs_app.py  wxs_dsm.py  wxs_utils.py
apps/wxs/bid/: bid_vin.py
apps/wxs/controller/: c_bmy.py  c_brand.py  c_dataset.py  c_model.py  c_sample.py  flask_web.py
apps/wxs/dm/: gcc2n_dm.py
apps/wxs/fu/: file_tree_folder_saver.py  file_util.py
apps/wxs/model/: m_bmy.py  m_brand.py  m_dataset.py  m_dataset_sample.py  m_model.py  m_mongodb.py  m_pk_generator.py  m_sample.py  m_vin.py
apps/wxs/vdc/: vd_json_manager.py  vd_json_saver.py
datasets/: bno_bn.txt  collect_img.py  image_lmdb.py  raw_domestic_brands.txt  remove_dirs.py  remove_picture_50.py  rm_bad_img.py  tongji_txt_v2d.py  train_val_split.py
logs/: step.txt  test_acc.txt  train_acc.txt
models/: LoadModel.py  siamese_app.py
tcv/: tcv_main.py
tcv/ds/: wxs_maml_ds.py
tools/pipeline/: pipeline_vehicle_postprocessor.py
tools/pipeline/config/: bid_brand_test_ds.txt  bmy_sim_org_dict.txt  bmys.txt  result_dict.txt  zjkj_label_v1.txt
transforms/: transforms.py
trt/: test_main.cpp
trt/common/: AllModuleInclude.h  exp.cpp  file_util.cpp  file_util.hpp  inc.h
trt/include/: all_model_include.h  all_module_include.h  args_parser.h  batch_stream.h  buffers.h  common.h  entropy_calibrator.h  fgvc.h  half.h  logger.h  logging.h  nv_crop_and_resize_novio.h  onnx_trt.h  parser_onnx_config.h  process_input_gpu.h  sample_engines.h  sample_options.h  sample_utils.h  simple_engines.h
trt/onnx2trt_int8/: CMakeLists.txt
trt/onnx2trt_int8/include/: BatchStream.h  CarFeature.h  entropyCalibrator.h  nvCropAndResizeNovio.h  processInputGpu.h  sampleOptions.h
trt/onnx2trt_int8/src/: CarFeature.cpp  OnnxTRT.cpp  entropyCalibrator.cpp  processInputGpu.cu  sampleOptions.cpp
trt/onnx2trt_int8/ut/: testMain.cpp
trt/src/: entropy_calibrator.cpp  fgvc.cpp  logger.cpp  nv_crop_and_resize_and_norm.cu  onnx_trt.cpp  process_input_gpu.cu  sample_engines.cpp  sample_options.cpp
trt/vehicleTypeRecognition/: CMakeLists.txt
trt/vehicleTypeRecognition/include/: ItsVehicleTypeRec.h  VehicleType.h
trt/vehicleTypeRecognition/src/: VehicleType.cpp
trt/vehicleTypeRecognition/ut/: main.cpp
trt/vehicle_fgvc/: CMakeLists.txt
trt/vehicle_fgvc/include/: OnnxTRT.h  api_base_type_def.hpp  api_global.hpp  argsParser.h  basewrapper.hpp  buffers.h  common.h  nvCropAndResizeNovio.h  nvHTCropAndResize.h  predictor_api.hpp  reflect.hpp  tensorrtwrapper.hpp  testutils.hpp  vehicle_fgvc.h  wrapper_base_type_def.hpp
trt/vehicle_fgvc/src/: nvCropAndResizeAndNorm.cu  nvHTCropAndResize.cu  vehicle_fgvc.cpp
trt/vehicle_fgvc/src/calib/: calib_phonecall.txt
trt/vehicle_fgvc/src/subfunction/centernet/: CMakeLists.txt  centernet_predictor_api.cpp  centernet_predictor_api.hpp  centernetpredictor.cpp  centernetpredictor.hpp
trt/vehicle_fgvc/src/subfunction/fgvc/: CMakeLists.txt  fgvc_predictor.cpp  fgvc_predictor.hpp  fgvc_predictor_api.cpp  fgvc_predictor_api.hpp
trt/vehicle_fgvc/src/tensorrtcppwrapper/: CMakeLists.txt  Int8EntropyCalibrator.cpp  Int8EntropyCalibrator.hpp  Trt.cpp  Trt.hpp  basepredictor.cpp  basepredictor.hpp  basewrapper.cpp  imgutils.cpp  imgutils.hpp  predictor_api.cpp  tensorrtpredictor.cpp  tensorrtpredictor.hpp  tensorrtwrapper.cpp  utils.h  vtnpredictor.cpp  vtnpredictor.hpp
trt/vehicle_fgvc/src/tensorrtcppwrapper/tiny-tensorrt/: CMakeLists.txt  PyTrt.cpp_  basewrapper.cpp_back
trt/vehicle_fgvc/src/test_util/: drawResults.cpp  drawResults.hpp  test_centernet.cpp  test_vtn.cpp  testutils.cpp
trt/vehicle_fgvc/ut/: cropMain.cpp  main.cpp
utils/: .ds_manager.py.swp  bno_bn.txt  data_preprocessor.py  dataset_DCL.py  ds_manager.py  eval_model.py  onnx_exporter.py  onnx_runner.py  pipeline_vehicle_postprocessor.py  train_model.py  utils.py  vao_test.py  wxs_bid_test.py
web/: dcl_classifier.py  web_server.py
work/: bmy_to_fgvc_id_dict.txt  fgvc_id_to_bmy_dict.txt  gcc2_vc_bmy.txt  ggh_to_bmy_dict.txt  known_brands.txt  nb_dict.txt  ob_nb_dict.txt  test_ds_to_copy.txt  unknown_ggh.txt
